# stellarheads

./: .env  .gitattributes  .gitignore  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  CODEBASE_DOCUMENTATION.md  CONTRACT_TESTING_GUIDE.md  Cargo.toml  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY.md  README.md  SOROBAN_CLIENT_FIXED.md  SOROBAN_DEPLOYMENT.md  build-game.sh  build.ps1  deploy.sh  dev.ps1  docker-compose.yml  test_api.html
.claude/: settings.local.json
backend/: .env  Cargo.toml  main.rs  routes.rs
backend/migrations/: 001_create_users_table.sql  002_create_game_results_table.sql
backend/src/: config.rs  error.rs  extractors.rs  lib.rs  main.rs
backend/src/database/: connection.rs  mod.rs  models.rs
backend/src/database/models/: user.rs
backend/src/database/repositories/: game_repository.rs  mod.rs  user_repository.rs
backend/src/handlers/: auth.rs  contract.rs  game.rs  game_results.rs  leaderboard.rs  mod.rs  soroban.rs  users.rs
backend/src/services/: auth_service.rs  game_service.rs  mod.rs
backend/src/services/soroban/: client.rs  manager.rs  mod.rs  pool.rs  registry.rs
backend/src/soroban/: cli_client.rs  mod.rs
backend/src/soroban/client/: mod.rs
backend/src/soroban/contracts/: leaderboard.rs
backend/src/soroban/types/: mod.rs
backend/static/game/: index.html  package.json  stellar_heads_game.d.ts  stellar_heads_game.js  stellar_heads_game_bg.wasm.d.ts  test-game.html
contract/: Cargo.toml
contract/src/: lib.rs  test.rs
game/: Cargo.toml  index.html  test.rs
game/src/: client.rs  egui_inspectorui.rs  lib.rs  lib_new.rs  main.rs  renderer.rs  server.rs
game/src/rendering/: inspector.rs  mod.rs
game/src/shared/: ball.rs  collision.rs  config.rs  goals.rs  ground.rs  mod.rs  player.rs  scoring.rs  ui.rs
game/src/shared/audio/: mod.rs  music_system.rs
game/src/shared/gameplay/: ball.rs  collision.rs  goals.rs  ground.rs  mod.rs  player.rs
game/src/shared/scoring/: mod.rs  scoring.rs  scoring.rs.backup
game/tests/: scoring_tests.rs
shared/: Cargo.toml
shared/src/: domain.rs  inputs.rs  lib.rs  protocol.rs
shared/src/dto/: auth.rs  common.rs  contract.rs  game.rs  mod.rs  user.rs
src/: main.rs  renderer.rs
src/shared/: ball.rs  goals.rs  mod.rs  player.rs  state.rs  state_ui.rs
yew-frontend/: Cargo.toml  Trunk.toml  index.html
yew-frontend/src/: api.rs  contract_test.rs  freighter.rs  game_score.rs  gamepage.rs  homepage.rs  lib.rs  login.css  loginpage.rs  main.rs  navbar.rs  routes.rs  soroban.rs  styles.css
yew-frontend/src/components/: contract.rs  mod.rs  navbar.rs
yew-frontend/src/pages/: gamepage.rs  homepage.rs  leaderboard.rs  loginpage.rs  mod.rs
yew-frontend/src/routing/: routes.rs
yew-frontend/src/services/: api.rs  mod.rs
yew-frontend/src/wallet/: freighter.rs  mod.rs
