[package]
name = "stellar_heads"
version = "0.1.0"
edition = "2021"

[features]
default = ["client", "server", "gui"]
client = []
server = []
gui = []

[dependencies]
bevy = "0.16.1"
lightyear = { version = "0.23.0", features = [
    "interpolation",
    "prediction", 
    "replication",
    "leafwing",
    "deterministic",
] }
avian2d = { version = "0.3.1", features = [
    "2d",
    "f32", 
    "parry-f32",
    "parallel",
    "serialize",
    "enhanced-determinism",
] }
leafwing-input-manager = "0.16.0"
lightyear_avian2d = { version = "0.23.0", features = ["deterministic", "2d"] }
serde = { version = "1.0", features = ["derive"] }

clap = { version = "4.0", features = ["derive"] }

cfg-if = "1.0"
