[workspace]
members = ["game", "yew-frontend", "shared", "backend", "contract"]
resolver = "2"

# Fast dev builds
[profile.dev]
opt-level = 1
debug = true
incremental = true

# Optimize deps, not your code
[profile.dev.package."*"]
opt-level = 3
debug = false

# Super fast iteration profile  
[profile.dev-fast]
inherits = "dev"
opt-level = 0
debug = false

