[package]
name = "backend"
version = "0.1.0"
edition = "2021" # use 2024 only if your rustc supports it

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
dotenvy = "0.15.7"
thiserror = "2.0.12"
base64 = "0.22.1"
reqwest = { version = "0.12.23", features = ["json"] }

serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
shared = { path = "../shared" }


[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"



