[package]
name = "backend"
version = "0.1.0"
edition = "2021" # use 2024 only if your rustc supports it

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
dotenvy = "0.15.7"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros", "bigdecimal"] }
bigdecimal = "0.4"
chrono = { version = "0.4", features = ["serde"] }
shared = { path = "../shared" }

# Soroban client for proper XDR generation
soroban-client = "0.5.1"
stellar-strkey = "0.0.13"

# High-scale infrastructure
rand = "0.8"


[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"



