[package]
name = "stellar_heads_game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stellar_heads"
path = "src/main.rs"

[lib]
name = "stellar_heads_game"
crate-type = ["cdylib", "rlib"]

# Removed networking features - single-player game only

[dependencies]
# Bevy with web-compatible features
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_state", "bevy_winit", "bevy_render", "bevy_core_pipeline",
    "bevy_sprite", "bevy_asset", "bevy_audio", "vorbis", "mp3", "png", "webgl2"
] }

# Removed lightyear - not needed for single-player game

# Strip physics features for dev
avian2d = { version = "0.3.1", default-features = false, features = [
    "2d", "f32", "parry-f32", "parallel"
] }

# bevy_egui = "0.36.0"  # Moved to native-only dependencies
# Removed leafwing-input-manager and lightyear_avian2d - not needed for single-player
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
# Removed clap and cfg-if - not needed for single-player
# bevy-inspector-egui = "0.33.1"  # Moved to native-only dependencies
bevy_window = "0.16.1"
# egui = "0.32.2"  # Moved to native-only dependencies
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1.6"
instant = { version = "0.1", features = ["wasm-bindgen"] }
shared = { path = "../shared" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["rt"] }
wasm-bindgen-futures = "0.4"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
chrono = { version = "0.4.42", features = ["serde"] }

[dependencies.web-sys]
version = "0.3.78"
features = [
  "console",
]


# Fast dev builds
[profile.dev]
opt-level = 0
debug = true
incremental = true

# Optimize deps, not your code - COMMENTED OUT TO FIX LINKING
# [profile.dev.package."*"]
# opt-level = 3
# debug = false

# Native-only dependencies (desktop builds)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_egui = "0.36.0"
bevy-inspector-egui = "0.33.1"
egui = "0.32.2"