[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
bevy = { version = "0.16", default-features = false, features = ["bevy_state"] }
lightyear = { version = "0.18", features = ["client", "server"] }

[lib]
name = "shared"
path = "src/lib.rs"
