[package]
name = "yew-scaffold"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18.0"
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
gloo-storage = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlSelectElement"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6.5"
gloo = "0.11"
gloo-timers = "0.3"
getrandom = { version = "0.2", features = ["js"] }
shared = {path = "../shared"}